--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ Improve text rendering
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 /*
@@ -57,8 +56,6 @@ h4,
 h5,
 h6 {
   overflow-wrap: break-word;
-  word-wrap: break-word;
-  word-break: break-word;
 }
 
 li {
@@ -67,7 +64,7 @@ li {
 
 a {
   text-decoration: none;
-    /* color: inherit; */
+    color: inherit;
 }
 
 
@@ -77,8 +74,8 @@ navbar style
 
 nav {
     width: 100%;
-    max-width: 1900px;
-    /* position: absolute; */
+    max-width: 1980px;
+    position: absolute;
     inset: 0 0 100% 0;
 }
 
@@ -96,7 +93,7 @@ nav .container {
 .logo {
     font-size: 1.5rem;
     font-weight: 700;
-    /* color: #fff; */
+    color: #fff;
 }
 
 .nav-link {
@@ -107,7 +104,7 @@ nav .container {
 }
 
 .list-item {
-    /* color: #fff; */
+    color: #fff;
     font-size: 1.2rem;
     font-weight: 500;
     transition: opacity 300ms ease;
@@ -124,3 +121,202 @@ nav .container {
     padding: 0.2rem 0.4rem;
     
 }
+
+
+.mobile-menu {
+    display: none;
+}
+
+
+/* header style */
+.header {
+    width: 100%;
+    max-width: 1980px;
+    height: 100vh;
+    background-image: url(./images/Hero\ section.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: 2;
+}
+
+.header .container {
+    width: 90%;
+    margin: 0 auto;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-info {
+    width: 50%;
+    margin-inline: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    z-index: 2;
+}
+
+.header-headline{
+    font-size: 40px;
+    width: 110%;
+    font-weight: 900;
+    text-align: center;
+    line-height: 110%;
+    text-transform: capitalize;
+    color: #fff;
+    padding-block: 1rem;
+}
+
+.header-para{
+    font-size: 1.2rem;
+    width: 150%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    text-transform: capitalize;
+    padding-bottom: 2rem;
+    color: #fff;
+}
+
+.btn {
+    background-color: #fff;
+    color: #000;
+    box-shadow: 0 0 4px 0 #994e4e;
+    padding: 0.5rem 1rem;
+    border-radius: 8px;
+    font-size: 1.2rem;
+    font-weight: 500;
+    transition: background-color 300ms ease;
+}
+.btn:hover {
+    background-color: hsl(0, 1%, 27%);
+    color: #fff;
+    box-shadow: 0 0 4px 0 #ffffff;
+    transform: scale(1.1);
+    transition: 0.5s;   
+    cursor: pointer;
+}
+
+form{
+    /* max-width: 100px; */
+    width: 100%;
+    margin-top: -40px;
+}
+
+form .container {
+    width: 80%;
+    margin-inline: auto;
+    background-color: hsl(0, 12%, 93%);
+    box-shadow: 0px 5px 10px rgba(80, 80, 80, 0.30);
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 1rem 0;
+    border-radius: 8px;
+    align-items: center;
+    min-height: 100px;
+    gap: 2rem;
+}
+
+/* From Uiverse.io by Praashoo7 */ 
+/* From Uiverse.io by ercnersoy */ 
+.coolinput {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    position: static;
+    max-width: 240px;
+  }
+  
+  .coolinput label.text {
+    font-size: 0.75rem;
+    color: #5d649c;
+    font-weight: 700;
+    position: relative;
+    top: 0.5rem;
+    margin: 0 0 0 7px;
+    padding: 0 3px;
+    background: #e8e8e8;
+    width: fit-content;
+  }
+  
+  .coolinput input[type=text].input {
+    padding: 11px 10px;
+    font-size: 0.75rem;
+    border: 2px hsl(240, 1%, 37%) solid;
+    border-radius: 5px;
+    box-shadow: #0000001a 0px 1px 3px 0px;
+    transition: border 0.3s;
+    background: #e8e8e8;
+  }
+  
+  .coolinput input[type=text].input:focus {
+    outline: none;
+  }
+
+.input input {
+    outline: 0;
+    border: 0;
+    background-color: transparent;
+    text-transform: uppercase;
+    font-size: 1rem;
+
+}
+
+/* From Uiverse.io by zanina-yassine */ 
+.input-btn {
+    min-width: 120px;
+  
+    position: relative;
+    cursor: pointer;
+  
+    padding: 12px 17px;
+    border: 0;
+    border-radius: 7px;
+  
+    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
+    background: radial-gradient(
+      ellipse at bottom,
+      rgba(71, 81, 92, 1) 0%,
+      rgba(11, 21, 30, 1) 45%
+    );
+  
+    color: rgb(255, 255, 255, 0.66);
+  
+    transition: all 1s cubic-bezier(0.15, 0.83, 0.66, 1);
+  }
+  
+  .input-btn::before {
+    content: "";
+    width: 70%;
+    height: 1px;
+  
+    position: absolute;
+    bottom: 0;
+    left: 15%;
+  
+    /* background: rgb(255, 255, 255); */
+    background: linear-gradient(
+      90deg,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 1) 50%,
+      rgba(255, 255, 255, 0) 100%
+    );
+    opacity: 0.2;
+  
+    transition: all 1s cubic-bezier(0.15, 0.83, 0.66, 1);
+  }
+  
+  .input-btn:hover {
+    /* color: rgb(255, 255, 255, 1); */
+    transform: scale(1.1) translateY(-3px);
+  }
+  
+  .input-btn:hover::before {
+    opacity: 1;
+  }
+  
