--- a/Rank.css
+++ b/Rank.css
@@ -12,14 +12,22 @@
     .nav-link{
         position: absolute;
         flex-direction: column;
-        align-items: start;
-        top: -50vh;
-        gap: 2rem;
-        left: 0%;
-        padding-left: 0;
+        align-items: flex-end;
+        /* top: -50vh; */
+        gap: 13px;
+        right: 0;
+        margin-right: 10%;
+        /* padding-right: 50%; */
         transition: opacity 200ms ease-in-out;
-        background-color: #505050;
-        width: 100%;
+        background: rgb(25, 55, 109);
+        background: linear-gradient(
+          0deg,
+          rgba(25, 55, 109, 0.2) 0%,
+          rgba(25, 55, 109, 1) 100%
+        );
+        box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
+        border-radius: 10px;
+        /* width: 80%; */
         opacity: 0;
         justify-content: start;
     }
@@ -32,14 +40,20 @@
     .nav-link.active {
         opacity: 1;
         top: 60px;
-        padding-left: 1rem;
+        flex-direction: column;
+        align-items: center;
+        /* padding-left: 1rem; */
         padding-top: 1rem;
-        z-index: 9999;
+        z-index: 1;
 
     }
 
     .nav-link.active a {
         color: #fff;
+    }
+
+    .nav-link.active a:hover {
+        color: #ffffff;
     }
 
     .contact{
